--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: Eric Michael Greeff
+description: Eric Michael Greeff is a Calgary based freelance software developer.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
