added contributions graph

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Eric Michael Greeff
-description: Eric Michael Greeff is a Calgary based freelance software developer.
+description: Freelance Web App Design
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
