--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf src/.observablehq/cache",
-    "build": "observable build",
+    "build": "node -r dotenv/config src/components/legal-env.js && observable build",
     "dev": "observable preview",
     "deploy": "observable deploy",
     "observable": "observable"
@@ -11,7 +11,8 @@
   "dependencies": {
     "@observablehq/framework": "^1.13.3",
     "d3-dsv": "^3.0.1",
-    "d3-time-format": "^4.1.0"
+    "d3-time-format": "^4.1.0",
+    "dotenv": "^17.3.1"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
