--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf src/.observablehq/cache",
-    "build": "node -r dotenv/config src/components/legal-env.js && observable build",
+    "build": "observable build",
     "dev": "observable preview",
     "deploy": "observable deploy",
     "observable": "observable"
